完善选项管理；优化菜单；优化整体渲染；取消立即模式

--- a/SimpleScreenOverlay/SimpleScreenOverlay.vcxproj.filters
+++ b/SimpleScreenOverlay/SimpleScreenOverlay.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="CGrTextCache.h">
       <Filter>Graphics</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Entry.cpp">
@@ -103,6 +106,9 @@
     </ClCompile>
     <ClCompile Include="CGrTextCache.cpp">
       <Filter>Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="Utils.cpp">
+      <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
